# transit-time

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  pyproject.toml  setup.py
.github/: code_of_conduct.md  contributing.md  dependabot.yml  developer_certificate.md  pull_request_template.md  renovate.json5  security.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  codeql.yml  data.yml
data/: populate.py  requirements.txt
data/pdx/rail/max-blue-line/: readme.md  to-gresham.json  to-gresham.min.json  to-hillsboro.json  to-hillsboro.min.json
data/pdx/rail/max-green-line/: readme.md  to-clackamas-town-center.json  to-clackamas-town-center.min.json  to-portland-city-center-psu.json  to-portland-city-center-psu.min.json
data/pdx/rail/max-orange-line/: readme.md  to-milwaukie.json  to-milwaukie.min.json
data/pdx/rail/max-red-line/: readme.md  to-beaverton-transit-center.json  to-beaverton-transit-center.min.json  to-hillsboro.json  to-hillsboro.min.json  to-portland-international-airport.json  to-portland-international-airport.min.json
data/pdx/rail/max-yellow-line/: readme.md  to-portland-city-center.min.json
data/rail/max-blue-line/: to-hillsboro.json  to-hillsboro.min.json
data/rail/max-green-line/: to-clackamas-town-center.json
data/rail/max-orange-line/: readme.md  to-milwaukie.json  to-milwaukie.min.json  to-portland-city-center.json  to-portland-city-center.min.json
data/rail/max-red-line/: readme.md  to-beaverton-transit-center.min.json  to-portland-international-airport.json  to-portland-international-airport.min.json
data/rail/max-yellow-line/: readme.md  to-expo-center.json  to-expo-center.min.json  to-portland-city-center.json
src/ttbot/: __init__.py  __main__.py  bot.py  data.py  embeds.py  log.py  time.py
src/ttbot/cogs/: transit.py
src/ttpdxbot/: __main__.py  bot.py
