[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transit-time-bot"
description = "A Discord bot that helps you get to where you're going IRL."
authors = [
    { name = "Nuztalgia" },
    { email = "nuztalgia@gmail.com" }
]
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = "==3.13.*"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dynamic = ["dependencies", "urls", "version"]

[project.scripts]
transit-time-bot = "ttbot.__main__:main"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"
add-ignore = "D1"

[tool.setuptools.dynamic]
version = { attr = "ttbot.version.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
